# awstaga

./: .coveragerc  .gitignore  .pylintrc  .rtk.json  CHANGELOG.md  LICENSE  Makefile  README.md  piemaker.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/instructions/: python-code.instructions.md  testing.instructions.md
.github/workflows/: ci-workflow.yaml  codeql-analysis.yml  publish-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml  upgrade-deps-workflow.yaml
awstaga/: __init__.py  awstaga.py  config.py  logger.py
awstaga/models/: __init__.py  resource.py  tag.py  tagset.py
complexity/radon/: index.html  report.txt
complexity/wily/: index.html
conf/: info.yaml
coverage/coverage/: class_index.html  d_74f066dd1aac4409___init___py.html  d_74f066dd1aac4409_resource_py.html  d_74f066dd1aac4409_tag_py.html  d_74f066dd1aac4409_tagset_py.html  d_debc4022e6a42556___init___py.html  d_debc4022e6a42556_config_py.html  d_debc4022e6a42556_logger_py.html  function_index.html  index.html  status.json  z_74f066dd1aac4409___init___py.html  z_74f066dd1aac4409_resource_py.html  z_74f066dd1aac4409_tag_py.html  z_74f066dd1aac4409_tagset_py.html  z_debc4022e6a42556___init___py.html  z_debc4022e6a42556_config_py.html  z_debc4022e6a42556_logger_py.html
doc/sphinx/: awstaga.html  awstaga.models.html  awstaga.models.rst  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
doc/sphinx/_build/doctrees/: awstaga.doctree  awstaga.models.doctree  environment.pickle  index.doctree
doc/sphinx/_build/html/: .buildinfo  awstaga.html  awstaga.models.html  genindex.html  index.html  search.html  searchindex.js
doc/sphinx/_build/html/_sources/: awstaga.rst.txt  index.rst.txt
doc/sphinx/_sources/: index.rst.txt
examples/: awstaga-cli.sh  awstaga-no-resource-tags.yaml  awstaga-no-tagsets.yaml  awstaga-with-includes.yaml  cli.sh  run.sh
examples/include.d/: tagset.yaml
lint/pylint/: index.html  report.json
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_awstaga.py  test_config.py  test_logger.py
tests-integration/: test_cb.py  test_constructor.py
tests-integration/fixtures/: awstaga-no-resource-tags.yaml  awstaga-no-resource-tagsetnames.yaml  awstaga-no-tagsets.yaml  awstaga.yaml
tests-integration/fixtures/include.d/: resources.yaml
tests/models/: test_resource.py  test_tag.py  test_tagset.py
