[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "awstaga"
version = "1.3.1-pre.0"
description = "Python CLI for tagging AWS resources based on a YAML configuration"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/awstaga"
repository = "https://github.com/cliffano/awstaga"
documentation = "https://github.com/cliffano/awstaga"
keywords = [ "awstaga", "aws", "tag", "tagging" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "awstaga"

[tool.poetry.scripts]
awstaga = "awstaga:cli"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.35.6"
click = "8.1.7"
conflog = "1.5.1"
PyYAML = "6.0.1"
pyyaml-include = "^1.3.2"

[tool.poetry.group.dev.dependencies]
twine = "5.1.1"
wheel = "0.44.0"

[tool.poetry.group.test.dependencies]
coverage = "7.2.3"
numpy = "1.26.4" # https://stackoverflow.com/questions/78634235/numpy-dtype-size-changed-may-indicate-binary-incompatibility-expected-96-from
pylint = "3.2.6"
pytest = "8.3.2"
wily = "1.25.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "2.4.0"
pytest-html = "4.1.1"
Sphinx = "8.0.2"
