[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "awstaga"
version = "2.1.1-pre.0"
description = "Python CLI for tagging AWS resources based on a YAML configuration"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/awstaga"
repository = "https://github.com/cliffano/awstaga"
documentation = "https://github.com/cliffano/awstaga"
keywords = [ "awstaga", "aws", "tag", "tagging" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

  [[tool.poetry.packages]]
  include = "awstaga"

  [tool.poetry.scripts]
  awstaga = "awstaga:cli"

  [tool.poetry.dependencies]
  python = "^3.10"
  boto3 = "~1.38.27"
  click = "~8.3.1"
  conflog = "~2.1.0"
  PyYAML = "~6.0.3"
  pyyaml-include = "~1.3.2"

[tool.poetry.group.dev.dependencies]
black = "~25.12.0"
twine = "~6.2.0"
wheel = "~0.45.1"

[tool.poetry.group.test.dependencies]
coverage = "~7.13.0"
numpy = "1.26.4"
pylint = "~4.0.4"
pytest = "~9.0.2"
radon = "~6.0.1"

[tool.poetry.group.doc.dependencies]
ansi2html = "~1.9.2"
pylint-report = "~2.4.2"
pytest-html = "~4.1.1"
Sphinx = "8.1.3"
